# fireart

./: .gitignore  README.md
back/: pyproject.toml
back/core/: settings.py  urls.py
front/: index.html  package-lock.json  package.json
front/src/: App.jsx
