[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Diego Guzmán <mrescape@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_react"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
django-cors-headers = "^4.2.0"
python-decouple = "^3.8"
dj-database-url = "^2.0.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
